--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Jokes</title>
 </head>
 <body>
-    <header>Lighten Exercise: Jokes</header>
+    <header>Dad Jokes!</header>
     <div id="dadJokes">
 
     </div>
